--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 Next week:
+- Rework dataset class to implement overloading of a main class
+- Test runs on CGvsNI
+- Make it work on CIFAR10
 - Understand the loss (supervised vs unsupervised, weights and all)
 - Check impact of nb_labels on training efficiency
-- Make it work on CIFAR10
-- Test runs on CGvsNI
+
 - Redo the downloader for CG images
-- Add training id generator
