--- a/TODO
+++ b/TODO
@@ -1,8 +1,16 @@
+Debug CIFAR10
+Add a testing on train set functionality at the end of train
+Check RGB vs L
+Check img pixel range (0 - 255 or 0 - 1)
+
+
 Add accuracy averaging on only supervised runs
 Implement CGvsNI dataset structure (image folder complete)
 Normalize display (saved graphs) for the losses
 
 Redo the downloader and img_crop for CG images
+
+Balanced sampler
 
 
 CGvsNI setup:
