Updated TODO list

--- a/TODO
+++ b/TODO
@@ -1,17 +1,15 @@
-Debug CIFAR10
-Add a testing on train set functionality at the end of train
-
-Implement CGvsNI dataset structure (image folder complete)
-Normalize display (saved graphs) for the losses
-
-Redo the downloader and img_crop for CG images
+Functionalities to add back to main.py
+- Train on only supervised training set
+- Hyperparameters optimization
 
 Balanced sampler
 
+Add a testing on train set functionality at the end of train
+
+Implement CGvsNI dataset structure (image folder complete)
+
+Redo the downloader and img_crop for CG images
 
 CGvsNI setup:
   clean folder: dataset files
   raw folder: name_labels at the root of the folder, and then all images in their own folder by dataset
-
-
-Check y_ema
