--- a/TODO
+++ b/TODO
@@ -22,3 +22,5 @@ Tester lr schedule start at 20% or 10% instead of 0%
 
 Patcher le setup de bettik pour le dl des fichiers
 Crop VRay et les images réelles si c'est pas déjà fait
+
+Fix the CGvsNI dataset process to match the real one (multiply the CG images, match the datasets numbers used in the original paper)
