--- a/TODO
+++ b/TODO
@@ -24,3 +24,5 @@ Patcher le setup de bettik pour le dl des fichiers
 Crop VRay et les images réelles si c'est pas déjà fait
 
 Fix the CGvsNI dataset process to match the real one (multiply the CG images, match the datasets numbers used in the original paper)
+
+Check if the datasets are really fixed just by fixing the numpy seed
