--- a/TODO
+++ b/TODO
@@ -15,6 +15,8 @@ Redo the downloader and img_crop for CG images
 
 
 Lancer CGvsNI supervisé avant toute chose
-Variation lr
-Variation nb labels
+
+
 Variation début loss unsup
+Problème loss non supervisée pour le début des courbes
+Varier (augmenter) le batch size par hasard
