--- a/TODO
+++ b/TODO
@@ -23,3 +23,8 @@ Varier (augmenter) le batch size par hasard
 
 
 Add TwoStreamBatchSampler to SVHN
+Update meanteach avec mise à jour à chaque epoch
+Finetune un modele MNIST sur CIFAR10 (avec le modèle CNN)
+Tester avec le modèel MNIST
+Vérifier images valeurs initales SVHN (0-1 ou 0-255)
+Raytune pour hyperparamètres optimisation
