Updated argparse with nb sample train instead of total

--- a/TODO
+++ b/TODO
@@ -28,5 +28,9 @@ Tester avec le modèel MNIST
 Raytune pour hyperparamètres optimisation
 
 CGvsNI :
-  Refaire le dataset splitter pour ne plusa voir d'anomalies et parfaitement contrôler le résultat
+  Refaire le dataset splitter pour ne plus avoir d'anomalies et parfaitement contrôler le résultat
   Implémenter la démarche totale (train sur un dataset 1 CG + NI puis test sur plusieurs datasets)
+
+
+Lancer des tests MNIST avec encore moins de labels
+Toujours comparer juste les labels supervisées vs full training SSL
