--- a/TODO
+++ b/TODO
@@ -27,11 +27,7 @@ Finetune un modele MNIST sur CIFAR10 (avec le modèle CNN)
 Tester avec le modèel MNIST
 Raytune pour hyperparamètres optimisation
 
-CGvsNI :
-  Refaire le dataset splitter pour ne plus avoir d'anomalies et parfaitement contrôler le résultat
-  Implémenter la démarche totale (train sur un dataset 1 CG + NI puis test sur plusieurs datasets)
-
-Lancer des tests MNIST avec encore moins de labels
-Toujours comparer juste les labels supervisées vs full training SSL
-
-Redo scripts to diminish number of testing samples to accommodate for the fact that there are only 434 VRay images
+Tester sur autodesk
+Tester sur Artlantis + autodesk
+RAPPOOOOOOOOOOOOOOOOORT
+Améliorer VAT (trouver le problème puis mixer avec Mean Teacher)
